@@ -15,7 +15,9 @@ BUGFIXES
  * Fix directory name cropping in 'upload directory to' in User Browse
  * Attempted to fix the 'interrupted system call' (which sometimes are caused
    by gtk+ file dialogs) from stopping the networking loop.
-
+ * Username hotspots for users who are offline or have left the room aren't
+   disabled anymore.
+ 
 TRANSLATIONS
  * ><((((*> updated the French translation
  * nince78 updated the Dutch translation
